<resources>
    <string name="app_name">CoffeeTEK</string>
    <string name="not_item_products">Não há produtos cadastrados</string>
    <string name="toolbar_title_list_products">Menu</string>
    <string name="toolbar_title_detail_product">Detalhes</string>
    <string name="error_server">Ops!!! Foi encontrado algum erro na requisão dos pordutos. Tente novamente</string>
    <string name="label_for_size">Tamanho</string>
    <string name="label_for_sugar">Açucar</string>
    <string name="label_for_addtionals">Adicionais</string>
    <string name="label_for_quantity">Quantidade</string>
    <string name="label_button_detail_product">Colocar no Carrinho</string>
    <string name="info_cart_count">Você tem %d %s no carrinho</string>
    <string name="toolbar_title_cart">Carrinho</string>
    <string name="title_alert_remove">Remover</string>
    <string name="message_alert_remove">Deseja remover %s do seu carrinho?</string>
    <string name="positive_alert">Sim</string>
    <string name="negative_alert">Não</string>
    <string name="message_remove_item_cart">%s removido com sucesso</string>
    <string name="label_remove">Excluir</string>
    <string name="message_add_cart">%s adicionado com suceso</string>
    <string name="message_update_cart">%s atualizado com sucesso</string>
    <string name="message_erro_add_cart">Erro ao adicionar %s</string>
    <string name="text_no_item_cart">Você não possui nenhum produto dentro seu carrinho</string>
    <string name="label_text_pay_cart">Finalizar Carrinho</string>
    <string name="title_pay_cart">Finalizar Carrinho</string>
    <string name="message_pay_cart">Deseja finalizar seu carrinho agora?</string>
    <string name="message_finnaly_cart">Carrinho finalizado com sucesso\nObrigado e volte sempre</string>
    <string name="text_message_remove_sucess">%s removido com sucesso</string>
    <string name="sugar0">Sem Açúcar</string>
    <string name="sugar1">Pouco Adoçado</string>
    <string name="sugar2">Adoçado</string>
    <string name="sugar3">Bem Adoçado</string>
    <string name="label_itens">itens</string>
    <string name="label_item">item</string>
    <string name="share_cart">cart</string>
    <string name="message_view_cart">Olá, para remover o item do carrinho basta deslizar o item para esquerda e clicar em excluir</string>
</resources>
