<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutDetail"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:elevation="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:textColor="@color/colorText"
            android:layout_gravity="center"
            android:text="@string/toolbar_title_detail_product"/>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:scrollbars="none"
        android:overScrollMode="never"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBege"
                android:minHeight="220dp">

                <ImageView
                    android:id="@+id/imageProd"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="24dp">

                <TextView
                    android:id="@+id/textNameProd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorText"
                    android:singleLine="true"
                    android:textSize="20dp"/>

                <TextView
                    android:id="@+id/textMLProd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorText"
                    android:singleLine="true"
                    android:textSize="18dp"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGray"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:paddingHorizontal="24dp">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/colorText"
                    android:text="@string/label_for_size"
                    android:layout_marginRight="12dp"
                    android:singleLine="true"
                    android:textSize="16dp" />

                <ImageView
                    android:id="@+id/imageCupP"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:src="@drawable/cup_unselect"
                    android:layout_marginHorizontal="12dp"/>

                <ImageView
                    android:id="@+id/imageCupM"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:src="@drawable/cup_unselect"
                    android:layout_marginHorizontal="12dp" />

                <ImageView
                    android:id="@+id/imageCupG"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/cup_unselect"
                    android:layout_marginHorizontal="12dp"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGray"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:paddingHorizontal="24dp">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/colorText"
                    android:text="@string/label_for_sugar"
                    android:layout_marginRight="12dp"
                    android:singleLine="true"
                    android:textSize="16dp" />

                <ImageView
                    android:id="@+id/imageSugar0"
                    android:clickable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/no_sugar_unselect"
                    android:layout_marginHorizontal="12dp"/>

                <ImageView
                    android:id="@+id/imageSugar1"
                    android:clickable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/sugar_unselect"
                    android:layout_marginHorizontal="12dp" />

                <ImageView
                    android:id="@+id/imageSugar2"
                    android:clickable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/sugar_two_unselect"
                    android:layout_marginHorizontal="12dp"/>

                <ImageView
                    android:id="@+id/imageSugar3"
                    android:clickable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/sugar_three_unselect"
                    android:layout_marginHorizontal="12dp"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGray"/>

            <LinearLayout
                android:id="@+id/layputAdditionals"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:paddingHorizontal="24dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/colorText"
                    android:text="@string/label_for_addtionals"
                    android:layout_marginRight="12dp"
                    android:singleLine="true"
                    android:textSize="16dp" />

                <HorizontalScrollView
                    android:layout_weight="1"
                    android:scrollbars="none"
                    android:overScrollMode="never"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_gravity="center">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="end">

                        <ImageView
                            android:id="@+id/imageChocolate"
                            android:clickable="true"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:src="@drawable/chocolate"
                            android:layout_marginHorizontal="10dp"/>

                        <ImageView
                            android:id="@+id/imageCinnamon"
                            android:clickable="true"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:src="@drawable/cinnamon"
                            android:layout_marginHorizontal="10dp"/>

                        <ImageView
                            android:id="@+id/imageCoffee"
                            android:clickable="true"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:src="@drawable/coffe"
                            android:layout_marginHorizontal="10dp"/>

                        <ImageView
                            android:id="@+id/imageCream"
                            android:clickable="true"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:src="@drawable/cream"
                            android:layout_marginHorizontal="10dp"/>

                        <ImageView
                            android:id="@+id/imageMilk"
                            android:clickable="true"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:src="@drawable/milk"
                            android:layout_marginHorizontal="10dp"/>

                    </LinearLayout>

                </HorizontalScrollView>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGray"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:paddingHorizontal="24dp">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/colorText"
                    android:text="@string/label_for_quantity"
                    android:layout_marginRight="12dp"
                    android:singleLine="true"
                    android:textSize="16dp" />


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/btnRemoveQtd"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="10dp"
                        android:src="@drawable/less"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/textQtdProd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:minWidth="32dp"
                        android:maxWidth="32dp"
                        android:singleLine="true"
                        android:maxLength="2"
                        android:gravity="center"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:textColor="@color/colorText"
                        android:text="1" />

                    <ImageView
                        android:id="@+id/btnAddQtd"
                        android:clickable="true"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="10dp"
                        android:src="@drawable/plus"
                        android:layout_gravity="center"/>

                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGray"/>

            <Button
                android:id="@+id/btnAddCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:textAllCaps="false"
                android:textSize="18dp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/bg_button_detail_product"
                android:text="@string/label_button_detail_product"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>